--- a/src/sass/components/_how-to-button.scss
+++ b/src/sass/components/_how-to-button.scss
@@ -136,6 +136,10 @@
     align-items: center;
     margin: 0 10rem 0;
     text-align: center;
+
+    @media (max-width: 600px) {
+      margin: 0;
+    }
   }
 
   &__header {
